# PROJ324

./: Packages I have installed  README.md  SearchAlgo.hpp  Summit Scene.ttt  confined environment.ttt  frames.gv  map.pgm  map.yaml  model v3.ttm  model v4.ttm  office_environment.ttt  project_launch.launch  summit model.ttm  summit_xl_rviz.rviz  testing.py
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/lib/pkgconfig/: confined_environment_search.pc  environment_search.pc  follow_waypoints.pc  image_processing.pc  keyboard_movement.pc  summit_gmapping.pc  summit_xl_control.pc  summit_xl_description.pc  summit_xl_explore.pc  summit_xl_gazebo.pc  summit_xl_j2s6s200_moveit_config.pc  summit_xl_j2s6s300_moveit_config.pc  summit_xl_j2s7s300_moveit_config.pc  summit_xl_localization.pc  summit_xl_move.pc  summit_xl_navigation.pc  summit_xl_pad.pc  summit_xl_perception.pc  summit_xl_robot_local_control.pc  summit_xl_sim_bringup.pc  target_follower.pc  target_tracker.pc
devel/lib/summit_xl_pad/: summit_xl_pad
devel/lib/target_tracker/: target_tracker_node
devel/share/confined_environment_search/cmake/: confined_environment_searchConfig.cmake
devel/share/environment_search/cmake/: environment_searchConfig.cmake
devel/share/follow_waypoints/cmake/: follow_waypointsConfig.cmake
get_odom_data/: CMakeLists.txt  package.xml
keyboard_movement/: CMakeLists.txt
launch/: summit_xl_project.launch
logs/summit_xl_control/: build.cmake.000.log.stderr
logs/summit_xl_description/: build.cmake.000.log.stderr
logs/summit_xl_gazebo/: build.cmake.000.log.stderr
logs/summit_xl_localization/: build.cmake.000.log.stderr
logs/target_tracker/: build.cmake.000.log.stderr
logs/vrep_ros_interface/: build.cmake.000.log.stderr
mapping_and_localisation/: CMakeLists.txt  package.xml
mapping_and_localisation/launch/: mapping_launcher.launch
src/: summit_xl_rviz.rviz
src/confined_environment_search/: CMakeLists.txt  package.xml
src/confined_environment_search/include/: SearchAlgo.hpp
src/confined_environment_search/launch/: confined_environment_search.launch
src/confined_environment_search/src/: SearchAlgo.cpp
src/follow_waypoints/: CMakeLists.txt  package.xml
src/keyboard_movement/launch/: keyboard_teleop.launch
src/summit_gmapping/: CMakeLists.txt  package.xml
src/summit_gmapping/launch/: amcl_launcher.launch  map_provider.launch  mapping_launcher.launch
src/summit_gmapping/params/: gmapping_node_params.yaml
src/summit_xl_explore/: CMakeLists.txt  package.xml
src/summit_xl_explore/launch/: summit_xl_explore_launcher.launch
src/summit_xl_move/: package.xml
src/summit_xl_move/config/: costmap_common.yaml  costmap_local.yaml  planner.yaml
src/summit_xl_move/launch/: summit_xl_move_base_odom_launcher.launch
src/target_tracker/: CMakeCache.txt  CMakeLists.txt  package.xml
src/target_tracker/include/: PoseEstimator.hpp  face_and_eye.cpp  face_and_eye.hpp  follow_target_step.hpp  frame_analyser.hpp  load_image.hpp  person_detector.hpp  target_marker_node.hpp
src/target_tracker/launch/: target_tracker.launch
src/target_tracker/src/: PoseEstimator.cpp  face_and_eye.cpp  follow_target_step.cpp  frame_analyser.cpp  load_image.cpp  person_detector.cpp  target_marker_node.cpp
summit_xl_move/: CMakeLists.txt
summit_xl_move/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  planner.yaml
summit_xl_move/launch/: summit_xl_move_base_odom_launcher.launch
target_tracker/: CMakeLists.txt  load_image.cpp  load_image.hpp  package.xml  target_tracker.launch
target_tracker/include/: load_image.hpp
target_tracker/launch/: target_tracker.launch
target_tracker/src/: load_image.cpp  load_image.hpp
(+21 files in other folders)
